--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  name        : "Erjun Zhang"
+  uri         : "http://zhangerjun.gihub.io"
+  email       : "erjun.zhang@polymtl.ca"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
