--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : "Erjun Zhang"
-  uri         : "http://zhangerjun.gihub.io"
+  uri         : "http://zhangerjun.gihub.io/"
   email       : "erjun.zhang@polymtl.ca"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
