--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Montreal, Canada"
   employer         : "CHU Sainte-Justine"
   pubmed           : 
-  googlescholar    : #"http://zhangerjun.google.com"
+  googlescholar    :
   email            : "erjun.zhang@polymtl.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
