--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile_zhang.jpg"
   bio              : "Biomedical Engineering Ph.D student"
   location         : "Montreal, Canada"
-  employer         : "CHU Sainte-Justine"
+  employer         : "PolyMTL UdeM CHU Sainte-Justine" 
   pubmed           : 
   googlescholar    :
   email            : "erjun.zhang@polymtl.ca"
