--- a/_config.yml
+++ b/_config.yml
@@ -111,11 +111,11 @@ author:
   tumblr           :
   twitter          : #"replacethistwitterhandle"
   vine             :
-  weibo            :
+  weibo            : "lzzhcy"
   xing             :
   youtube          :
   wikipedia        :
-  weixin           : "lzzhcy"
+  wechat           : "lzzhcy"
 
 
 # Reading Files
