--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   tumblr           :
   twitter          : #"replacethistwitterhandle"
   vine             :
-  weibo            : "https://www.weibo.com/2294379734/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"
+  weibo            : "https://www.weibo.com/2294379734"
   xing             :
   youtube          :
   wikipedia        :
