--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :  
   pubmed           : 
   googlescholar    :
-  email            : "erjun.zhang@polymtl.ca""erjun.zhang@foxmail.com"
+  email            : "erjun.zhang@polymtl.ca"
   researchgate     :  "https://www.researchgate.net/profile/Erjun_Zhang" # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
