remove personal figure

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Erjun Zhang"
-  avatar           : "profile_zhang.jpg"
+  avatar           : "bio-photo-2.jpg"
   bio              : "Biomedical Engineering Ph.D student at PolyMTL"
   location         : "Montreal, Canada"
   employer         :  
